# Maily

./: .env  .gitignore  CMakeLists.txt  DockerfileClient  DockerfileReact  DockerfileServer  DockerfileTests  DockerfileWeb  README.md  docker-compose.yml
android/: .gitignore  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
src/Main/: AddURLCommand.cpp  AddURLCommand.h  App.cpp  App.h  BloomFilter.cpp  BloomFilter.h  CheckURLCommand.cpp  CheckURLCommand.h  ClientSocket.py  CommandInputParser1.cpp  CommandInputParser1.h  ConsoleInputHandler.cpp  ConsoleInputHandler.h  ConsoleOutputHandler.cpp  ConsoleOutputHandler.h  DeleteURLCommand.cpp  DeleteURLCommand.h  FileDataManager.cpp  FileDataManager.h  HashStrategy1.cpp  HashStrategy1.h  ICommand.h  ICommandParser.h  IDataManager.h  IHashStrategy.h  IInitParser.h  IInputHandler.h  IOutputHandler.h  IThreadHandler.h  InitializationInputParser1.cpp  InitializationInputParser1.h  ServerSocket.cpp  ServerSocket.h  SocketInputHandler.cpp  SocketInputHandler.h  SocketOutputHandler.cpp  SocketOutputHandler.h  ThreadPerClientHandler.cpp  ThreadPerClientHandler.h
src/Tests/: test.cpp
src/Web/: .env  app.js  package-lock.json  package.json
src/Web/controllers/: blacklist.js  drafts.js  labels.js  mails.js  spam.js  tokens.js  trash.js  users.js
src/Web/models/: blacklist.js  drafts.js  labels.js  mails.js  spam.js  trash.js  users.js
src/Web/routes/: blacklist.js  drafts.js  labels.js  mails.js  spam.js  tokens.js  trash.js  users.js
src/Web/services/: labelService.js  mailService.js  tokenService.js  userService.js
src/Web/utils/: isLoggedIn.js  linkExtractor.js
web-client/: .env  package-lock.json  package.json
web-client/public/: index.html
web-client/src/: App.js  index.js
web-client/src/styles/: DarkMode.css
wiki/: 0.Build-And-Setup.md  1.Android-App-Usage.md  2.Web-App-Usage.md  Android-App-Usage.md  Build-And-Setup.md  Web-App-Usage.md  howto.md
(+141 files in other folders)
